@@ -207,6 +207,52 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Creates and returns a new SearcherManager from an existing {@link DirectoryReader}.  Note that    * this steals the incoming reference.    *    * @param reader the DirectoryReader.    * @param searcherFactory An optional {@link SearcherFactory}. Pass    *<code>null</code> if you don't require the searcher to be warmed    *        before going live or other custom behavior.    *            * @throws IOException if there is a low-level I/O error    */
+DECL|method|SearcherManager
+specifier|public
+name|SearcherManager
+parameter_list|(
+name|DirectoryReader
+name|reader
+parameter_list|,
+name|SearcherFactory
+name|searcherFactory
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|searcherFactory
+operator|==
+literal|null
+condition|)
+block|{
+name|searcherFactory
+operator|=
+operator|new
+name|SearcherFactory
+argument_list|()
+expr_stmt|;
+block|}
+name|this
+operator|.
+name|searcherFactory
+operator|=
+name|searcherFactory
+expr_stmt|;
+name|this
+operator|.
+name|current
+operator|=
+name|getSearcher
+argument_list|(
+name|searcherFactory
+argument_list|,
+name|reader
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 DECL|method|decRef
