@@ -184,6 +184,34 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|FilterDirectoryReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|FilterLeafReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|IndexReader
 import|;
 end_import
@@ -213,6 +241,34 @@ operator|.
 name|index
 operator|.
 name|IndexWriterConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|LeafReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|LeafReaderContext
 import|;
 end_import
 
@@ -297,6 +353,8 @@ operator|.
 name|util
 operator|.
 name|LuceneTestCase
+operator|.
+name|SuppressCodecs
 import|;
 end_import
 
@@ -311,8 +369,6 @@ operator|.
 name|util
 operator|.
 name|LuceneTestCase
-operator|.
-name|SuppressCodecs
 import|;
 end_import
 
@@ -2361,6 +2417,249 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 name|sm
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|class|MyFilterLeafReader
+specifier|private
+specifier|static
+class|class
+name|MyFilterLeafReader
+extends|extends
+name|FilterLeafReader
+block|{
+DECL|method|MyFilterLeafReader
+specifier|public
+name|MyFilterLeafReader
+parameter_list|(
+name|LeafReader
+name|in
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|class|MyFilterDirectoryReader
+specifier|private
+specifier|static
+class|class
+name|MyFilterDirectoryReader
+extends|extends
+name|FilterDirectoryReader
+block|{
+DECL|method|MyFilterDirectoryReader
+specifier|public
+name|MyFilterDirectoryReader
+parameter_list|(
+name|DirectoryReader
+name|in
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|in
+argument_list|,
+operator|new
+name|FilterDirectoryReader
+operator|.
+name|SubReaderWrapper
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|LeafReader
+name|wrap
+parameter_list|(
+name|LeafReader
+name|reader
+parameter_list|)
+block|{
+return|return
+operator|new
+name|MyFilterLeafReader
+argument_list|(
+name|reader
+argument_list|)
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|doWrapDirectoryReader
+specifier|protected
+name|DirectoryReader
+name|doWrapDirectoryReader
+parameter_list|(
+name|DirectoryReader
+name|in
+parameter_list|)
+block|{
+return|return
+operator|new
+name|MyFilterDirectoryReader
+argument_list|(
+name|in
+argument_list|)
+return|;
+block|}
+block|}
+comment|// LUCENE-6087
+DECL|method|testCustomDirectoryReader
+specifier|public
+name|void
+name|testCustomDirectoryReader
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|DirectoryReader
+name|reader
+init|=
+operator|new
+name|MyFilterDirectoryReader
+argument_list|(
+name|w
+operator|.
+name|getReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|SearcherManager
+name|mgr
+init|=
+operator|new
+name|SearcherManager
+argument_list|(
+name|reader
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|w
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|mgr
+operator|.
+name|maybeRefresh
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|s
+init|=
+name|mgr
+operator|.
+name|acquire
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|assertTrue
+argument_list|(
+name|s
+operator|.
+name|getIndexReader
+argument_list|()
+operator|instanceof
+name|MyFilterDirectoryReader
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|LeafReaderContext
+name|ctx
+range|:
+name|s
+operator|.
+name|getIndexReader
+argument_list|()
+operator|.
+name|leaves
+argument_list|()
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|ctx
+operator|.
+name|reader
+argument_list|()
+operator|instanceof
+name|MyFilterLeafReader
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|mgr
+operator|.
+name|release
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|mgr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|w
 operator|.
 name|close
 argument_list|()
